2009-10-12
  - auto-assign fields after calling data= instead of after calling .all
  - remove require 'rubygems', so folks with non-gem setups can still use AH
  - added more specific activesupport dependency to ensure that metaclass is available
  - AH no longer calls to_i on ids.  If you pass in a string as an id, you'll get a string back

2009-08-19
  - Added custom finders for multiple fields, such as .find_all_by_name_and_age

2009-07-23
  - Added support for auto-defining methods based on hash keys in ActiveHash::Base
  - Changed the :field and :fields API so that they don't overwrite existing methods (useful when ActiveHash auto-defines methods)
  - Fixed a bug where ActiveFile incorrectly set the root_path to be the path in the gem directory, not the current working directory

2009-07-24
  - ActiveFile no longer reloads files by default
  - Added ActiveFile.reload_active_file= so you can cause ActiveFile to reload
  - Setting data to nil correctly causes .all to return an empty array
  - Added reload(force) method, so that you can force a reload from files in ActiveFile, useful for tests